Draft article loader, with mark as read on scroll
Also:
* Start the sidebar functions and loaders
* Start css
* Refactor and delete old files
* Tweak API to add missing data on response

--- a/front/app/styles/header/header.css
+++ b/front/app/styles/header/header.css
@@ -1,6 +1,25 @@
+@font-face {
+  font-family: "algerian";
+  src: url("/font/ALGER.TTF") format("ttf");
+}
+
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px gray solid;
+}
+
+header .logo {
+  font-family: "algerian";
+  color: rgb(56, 93, 56);
+  font-size: 35px;
+}
+
+header .beta {
+  font-size: 15px;
+}
+
+header .tagline {
+  font-size: 40px;
 }
